--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -1,42 +1,110 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  margin: 0px;
+  padding: 0px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.Login{
+  background-image: url("./assets/Images/loginform-bg.jpg");
+  background-position: 50% 100%;  
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Login--container{
+  background: linear-gradient(180deg, rgba(253, 253, 253, 0.147) 0%, rgba(246, 246, 246,  0.147) 62%, rgba(0, 0, 0, 0.684) 100%, rgba(164,170,158,1) 100%);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #004000;
+  font-weight: 600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.Login--topbox{
+  width: 100%;
+  background-color: #008000;
+  height: 70px;
+  position: absolute;
+  top: 0;
+}
+.Login--logo{
+  object-fit: contain;
+  width: 130px;
+  height: 130px;
+  margin-bottom: 30px;
 }
 
-.card {
-  padding: 2em;
+.Login--box{
+  width: 330px;
+  background-color: rgb(255, 255, 255,0.9);
+  border-radius: 10px;
+  border: 1.5px solid #008000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 89px 42px 78px;
+  font-family: 'Lexend', sans-serif;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-.read-the-docs {
-  color: #888;
+/*
+.Login--box label{
+  align-self: flex-start;
+  letter-spacing: 0.5px;
+  margin-top: 38px;
+}
+
+.Login--box label:first-of-type{
+  margin: 0px;
+}*/
+
+.Login-input-text{
+  width: 100%;
+  text-indent: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px;
+  border: 1px solid #00800080;
+}
+
+.Login--box p{
+  align-self: flex-end;
+  font-size: 14px;
+  color: #008000;
+}
+
+.Login--box a{
+  color: #0069FF;
+}
+
+/*
+.Login-btn{
+  width: 137px;
+  height: 44px;
+  background-color: #008000;
+  color: white;
+  font-size: 16px;
+  font-family: 'Lexend', sans-serif;
+  border: 0px;
+  cursor: pointer;
+  margin-top: 90px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 4px;
+}
+
+.Login-btn:hover{
+  background-color: #066506;
+  transition: 0.2s;
+}*/
+
+
+.Login--notifbox{
+  margin-bottom: 15px;
+  height: 50px;
+}
+
+.bg{
+  background-color: red;
+  align-self: self-start;
 }
