--- a/Front-End/src/css/Navbar.css
+++ b/Front-End/src/css/Navbar.css
@@ -15,7 +15,7 @@
 .Navbar-title{
     font-size: 30px;
     font-family: 'Quicksand', sans-serif;
-    color: black;
+    color: #212529;
 }
 .Navbar div{
     display: flex;
@@ -34,3 +34,17 @@
     font-size: 18px;
     letter-spacing: 1px;
 }
+
+.Navbar-Menu{
+    top: 71px;
+    right:30px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    transition: 0.3s;
+}
+
+
+
