--- a/Front-End/src/css/Navbar.css
+++ b/Front-End/src/css/Navbar.css
@@ -33,6 +33,7 @@
     color: #343a40;
     font-size: 18px;
     letter-spacing: 1px;
+    margin-right: 5px;
 }
 
 .Navbar-Menu{
@@ -46,5 +47,51 @@
     transition: 0.3s;
 }
 
+.modal_h1{
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    color: #343a40;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ced4da;
+}
 
+.modal_div{
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal_p1{
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 20px;
+}
+
+.SignOut_btn ,  .Cancel_btn{
+    width: 45%;
+    padding: 8px 0px;
+    font-family: 'Poppins', sans-serif;
+    border: 0px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    transition: 0.3s;
+}
+
+.SignOut_btn{
+    background-color: #e63947;
+    color: white;
+}
+
+.Cancel_btn{
+    border: 1px solid #dee2e6;
+}
+
+.SignOut_btn:hover{
+    background-color: #e7182a;
+}
+
+.Cancel_btn:hover{
+    border: 1px solid #adb5bd;
+}
 
