--- a/Front-End/src/css/Dashboard.css
+++ b/Front-End/src/css/Dashboard.css
@@ -22,7 +22,16 @@
     justify-content: space-between;
     padding: 50px 50px 20px;
     width: 100%;
-    background-color: #fdfffc;
+    background-color: #52b78803;
+}
+
+.Dashboard_h1 {
+    font-family: 'Poppins', sans-serif;
+    color: #2d6a4f;
+    margin-bottom: 10px;
+    width: 100%;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #dee2e6;
 }
 
 .Footer{
