--- a/Front-End/src/css/Dashboard.css
+++ b/Front-End/src/css/Dashboard.css
@@ -32,6 +32,10 @@
     width: 100%;
     padding-bottom: 10px;
     border-bottom: 1px solid #dee2e6;
+    animation-name: leftfade;
+    animation-duration: 1s;
+    position: relative;
+    z-index: -1;
 }
 
 .Footer{
@@ -41,4 +45,14 @@
     padding: 10px 0px;
     font-family: 'Karla', sans-serif;
     color: #212529;
+}
+
+@keyframes leftfade {
+    from {
+        opacity: 0;
+        right: 25px;
+    }to {
+        opacity: 1;
+        right: 0px;
+    }
 }
