--- a/Front-End/src/css/Main.css
+++ b/Front-End/src/css/Main.css
@@ -2,6 +2,52 @@
     color: #003857;
     display: flex;
     flex-direction: column;
+    padding: 30px 25px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+    width: 280px;
+    justify-content: flex-start;
+    font-family: 'Quicksand', sans-serif;
+    background-color: white;
+    border: 1px solid #dee2e6;
+    margin-top: 30px;
+}
+
+.Main-Text {
+    font-size: 14px;
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    color: #6c757d;
+    line-height: 1.3;
+    margin-bottom: 10px;
+}
+
+.Main-Box h2{
+    font-size: 24px;
+    margin: 15px 0px 5px;
+    color: #1b4965;
+    letter-spacing: 1px;
+}
+
+.Main-div{
+    display: flex;
+    gap: 20px;
+}
+
+.Main-button{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    color: #0582ca;
+}
+
+/* .Main-container {
+    color: #003857;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     padding: 50px 25px;
     border-radius: 10px;
@@ -38,4 +84,4 @@
     font-weight: 300;
     letter-spacing: 1px;
 
-}
+} */
