--- a/Front-End/src/css/User/Tabs/Components/SAT.css
+++ b/Front-End/src/css/User/Tabs/Components/SAT.css
@@ -146,183 +146,20 @@
     margin: 15px 0px 40px;
 }
 
-
-
-/* .SAT_header {
-    font-family: 'QuickSand', sans-serif;
-    letter-spacing: 1px;
-    color: #295c45;
-    padding: 12px 25px;
-    font-size: 14px;
+.sat_submit_btn{
+    width: 100%;
+    padding: 10px 0px;
     border-radius: 5px;
-    background-color: #388e3c29;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid white;
-}
-
-.SAT_container {
-    display: flex;
-    gap: 50px;
-    padding: 0px 25px 40px 25px;
-}
-
-.SAT_form {
-    width: 80%;
-}
-
-.SAT_question_h1 {
-    font-family: 'Lato', sans-serif;
-    font-weight: bold;
-    font-size: 16px;
+    border: 1px solid #f8f9fa;
+    background-color: #69b96eff;
     color: white;
-    background-color: #388e3ce8;
-    padding: 15px 20px;
-    border-top-right-radius: 6px;
-    border-top-left-radius: 6px;
     letter-spacing: 1px;
-}
-
-.SAT_question_p2 {
-    font-family: 'Karla', sans-serif;
-    font-weight: bold;
-    font-size: 16px;
-    margin: 20px 20px 0px;
-    letter-spacing: 0.5px;
-    color: #1a533b;
-}
-
-.Question_Status {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 30px;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-    border-radius: 8px;
-}
-
-.SAT_sub_container {
-    display: flex;
-    gap: 20px;
-    width: 100%;
-    margin: 20px 25px 50px;
-}
-
-.SAT_sub_container div {
-    padding: 10px 20px;
-    border: 1px solid #ced4da;
-    border-radius: 5px;
-}
-
-.Question_Status_container {
-    margin-top: 20px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
-    gap: 10px;
-}
-
-.Questions_circle {
-    border: 1px solid #e9ecef;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 35px;
-    height: 35px;
-    background-color: #f8f9fa;
-    font-family: 'Poppins', sans-serif;
     font-size: 14px;
+    font-family: 'Poppins', sans-serif;
     cursor: pointer;
-}
-
-.Question_Status_p1,
-.Question_Status_p2 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    color: #343a40;
-}
-
-.choices_group {
-    display: flex;
-    flex-direction: column;
-    gap: 0px;
-    margin: 20px 20px;
-}
-
-.choices_group div {
-    border: 1px;
-    padding: 5px 0px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-family: 'Lato', sans-serif;
-    font-size: 14px;
-    font-weight: bold;
     transition: 0.3s;
-    cursor: pointer;
-    border-radius: 5px;
 }
 
-.choices_group div:hover {
-    background-color: #388e3c1d;
+.sat_submit_btn:hover{
+    background-color: rgb(90, 166, 96);
 }
-
-.SAT_header_div {
-    display: flex;
-    width: 30%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.SAT_question_container {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    margin: 20px 0px;
-}
-
-.SAT_question {
-    border: 1px solid #ced4da63;
-    background-color: #388e3c05;
-    border-radius: 10px;
-    color: #255741;
-}
-
-.SAT_form_p {
-    font-family: 'Lato', sans-serif;
-    font-weight: bold;
-    margin: 20px 5px 0px;
-}
-
-.status{
-
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    margin-top: 25px;
-}
-
-.status div div {
-    width: 12px;
-    height: 12px;
-    border-radius: 20px;
-    border: 1px solid #ced4da63
-}
-
-.status div {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    font-family: 'Karla', sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    color: #343a40;
-} */
