--- a/Front-End/src/css/User/Tabs/Main_Dashboard.css
+++ b/Front-End/src/css/User/Tabs/Main_Dashboard.css
@@ -1,16 +1,21 @@
-.Main-container {
+.Main{
+    margin-top: 100px;
+}
+.Main_container {
     color: #003857;
     display: flex;
+    padding: 40px;
     flex-direction: column;
-    padding: 30px 25px;
+    align-items: center;
+    justify-items: center;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
-    width: 280px;
     justify-content: flex-start;
     font-family: 'Quicksand', sans-serif;
     background-color: white;
-    border: 1px solid #dee2e6;
-    margin-top: 30px;
+    border: 1px solid #e9ecef;
+    width: 100%;
+    height: 100%;
 }
 
 .Main-Text {
@@ -29,9 +34,35 @@
     letter-spacing: 1px;
 }
 
-.Main-div{
-    display: flex;
-    gap: 20px;
+.Main-div {
+    display: grid;
+    grid-template-columns: 1.4fr 0.8fr 0.8fr;
+    grid-template-rows: 1fr 1fr;
+    gap:20px 20px;
+    grid-template-areas:
+        "mc m1 m3"
+        "mc m2 m4";
+    /* background-color: red; */
+}
+
+.mc {
+    grid-area: mc;
+}
+
+.m1 {
+    grid-area: m1;
+}
+
+.m2 {
+    grid-area: m2;
+}
+
+.m3 {
+    grid-area: m3;
+}
+
+.m4 {
+    grid-area: m4;
 }
 
 .Main-button{
@@ -44,19 +75,19 @@
     color: #0582ca;
 }
 
-/* .Main-container {
+.Main_container1 {
     color: #003857;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 50px 25px;
+    align-items: flex-start;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
-    width: 280px;
     justify-content: center;
     font-family: 'Quicksand', sans-serif;
-    background-color: #0076b62b;
+    background-color: white;
     border: 1px solid #e9ecef;
+    width: 100%;
+    padding: 20px 20px;
 }
 
 .Main-Likeicon {
@@ -65,23 +96,28 @@
 }
 
 .Main-Text {
-    font-size: 18px;
+    font-size: 1px;
 }
 
 .Main-Image {
-    width: 200px;
+    width: 250px;
     margin-bottom: 35px;
 }
 
 .Main-Box h2{
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 20px;
 }
 
 .Main-Box p{
-    font-size: 15px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-size: 13px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
     letter-spacing: 1px;
+} 
 
-} */
+.icon_Dashboard{
+    border: 1px solid #e9ecef;
+    border-radius: 5px ;
+    display: flex;
+    padding: 5px;
+}
