--- a/Front-End/src/css/ErrorPage.css
+++ b/Front-End/src/css/ErrorPage.css
@@ -1,7 +1,7 @@
 .ErrorPage{
     display: flex;
     flex-direction: column;
-    background-color: #a3cef117;
+    background-color: white;
     height: 100vh;
     justify-content: center;
     align-items: center;
@@ -13,22 +13,23 @@
 }
 
 .ErrorPage h1{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'QuickSand', sans-serif;
+    margin-bottom: 5px;
 }
 
 .ErrorPage p{
-    font-family: 'Lato', sans-serif;
-    font-weight: 600;
+    font-family: 'QuickSand', sans-serif;
+    font-weight: bold;
     color: #6c757d;
 }
 
 .ErrorPage button{
-    font-family: 'Lato', sans-serif;
-    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
     margin-top: 30px;
     width: 200px;
     padding: 12px 0px;
-    border-radius: 20px;
+    border-radius: 50px;
     border: 0px;
     cursor: pointer;
     border: 0px;
