--- a/Front-End/src/css/User/Tabs/User_Profile.css
+++ b/Front-End/src/css/User/Tabs/User_Profile.css
@@ -6,11 +6,14 @@
 .Profile {
     display: flex;
     gap: 30px;
-    height: 100%;
+    width: 80%;
+    align-items: center;
+    /* height: 93vh; */
 }
 
 .Profile-box {
-    width: 60%;
+    width: 100%;
+    height: max-content;
 }
 
 .Profile-container {
@@ -22,12 +25,11 @@
 
 }
 
-.Profile-Information,
-.Profile-result-exam,
-.Profile-result-ia {
+.Profile-Information {
     background-color: #388e3c09;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 2px 0px;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
     border-radius: 20px;
+    border: 1px solid #2d6a4f19;
 }
 
 .Profile-result-exam, 
@@ -46,7 +48,7 @@
 .Profile-Information-h1 {
     margin-bottom: 40px;
     font-family: 'Quicksand', sans-serif;
-    color: #2d6a4f;
+    color: #4e7f38ff;
     letter-spacing: 1px;
     font-size: 30px;
 }
@@ -77,7 +79,7 @@
 
 .Profile-info-header button {
     background-color: #f8f9fa67;
-    border: 1.5px solid #388E3C;
+    border: 1.5px solid #388e3c62;
     padding: 8px 12px;
     border-radius: 5px;
     color: #388E3C;
@@ -93,12 +95,14 @@
 
 .Profile-info-header button:hover {
     /* background-color: rgba(56, 142, 60, 0.805); */
-    background-color: rgba(56, 142, 60);
+    background-color: rgba(56, 142, 60, 0.835);
     color: white;
 }
 
 .info-box-title {
-    font-size: 20px;
+    font-size: 24px;
+    color: #252a35ff;
+    font-family: 'QuickSand', sans-serif;
 }
 
 .Profile-input-container {
@@ -111,22 +115,22 @@
     gap: 20px 50px;
 }
 
-.Profile-input-container input {
+.Profile-input-container input, .radio{
     margin-top: 10px;
     border-radius: 5px;
     border: 1px solid #ced4da;
     padding: 10px 0px;
     text-indent: 10px;
     width: 100%;
-    font-family: 'Lato', sans-serif;
+    font-family: 'QuickSand', sans-serif;
     font-weight: bold;
     letter-spacing: 1px;
     transition: 0.3s;
 }
 
-.Profile-input-container input:disabled{
+.Profile-input-container input:disabled , .radio:disabled{
     background-color: rgba(255, 255, 255, 0.5);
-    color: #293241;
+    color: rgba(105, 114, 128, 0.71);
 }
 
 .Profile-info-box input:focus {
@@ -134,20 +138,7 @@
     box-shadow: rgb(56, 142, 60, 0.6) 0px 0px 0px 2px;
 }
 
-.result-title {
-    font-family: 'Quicksand', sans-serif;
-    color: #2d6a4f;
-    font-size: 22px;
-    margin-bottom: 10px;
-}
 
-.result-p {
-    font-family: 'Lato', sans-serif;
-    font-weight: bold;
-    color: #2d6a4f;
-    font-size: 16px;
-    letter-spacing: 1px;
-}
 
 .Profile-subjects,
 .Profile-interest {
@@ -182,6 +173,43 @@
     margin-bottom: 15px;
 }
 
+.Profile-btn-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+.Profile_Avatar{
+    background-color: #69b96eff;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    font-size: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    gap: 0px;
+    font-family: 'QuickSand', sans-serif;
+    font-weight: bold;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+/* 
+.result-title {
+    font-family: 'Quicksand', sans-serif;
+    color: #2d6a4f;
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
+.result-p {
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    color: #2d6a4f;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
 .sub_score {
     color: #293241;
     font-family: 'Poppins', sans-serif;
@@ -195,31 +223,6 @@
     font-size: 13px;
     font-weight: bold;
     letter-spacing: 1px;
-}
-
-.Math {
-    /* background-color: #0096c7; */
-    background-color: #0095c76b;
-}
-
-.Science {
-    /* background-color: #52b788; */
-    background-color: #52b7886b;
-}
-
-.English {
-    /* background-color: #f13030; */
-    background-color: #f130306b;
-}
-
-.History {
-    /* background-color: #f4a261; */
-    background-color: #f4a2616b;
-}
-
-.Profile-btn-container {
-    display: flex;
-    justify-content: flex-end;
 }
 
 .sub_score_box {
@@ -245,3 +248,23 @@
     letter-spacing: 1px;
     flex: 30%;
 }
+
+.Math {
+
+    background-color: #0095c76b;
+}
+
+.Science {
+    
+    background-color: #52b7886b;
+}
+
+.English {
+  
+    background-color: #f130306b;
+}
+
+.History {
+  
+    background-color: #f4a2616b;
+} */
