--- a/Front-End/src/css/Admin/Form/Entrance_Exam.css
+++ b/Front-End/src/css/Admin/Form/Entrance_Exam.css
@@ -43,13 +43,18 @@
 }
 
 .A_EE_tab1 {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    padding: 50px;
+    flex-direction: column; */
+    padding: 50px 0px;
 }
 
+.Tab_title{
+    font-size: 16px;
+    font-family: 'QuickSand', sans-serif;
+    color: #587f63ff;
+}
 .tab_p1 {
     font-size: 26px;
     font-family: 'QuickSand', sans-serif;
@@ -64,7 +69,7 @@
     color: #505161ff;
 }
 
-.tab1_form {
+.tab1_form, .tab2_form{
     margin: 30px 0px;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
@@ -73,17 +78,22 @@
     color: #505161ff;
 }
 
+.tab1_form {
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 1fr 1fr; 
+}
+
 .tab_input {
     border: 1px solid #CED4DA;
     border-radius: 5px;
-    padding: 10px 0px;
     font-family: 'Poppins', sans-serif;
-    font-weight: bold;
     margin: 10px 0px;
     letter-spacing: 0.5px;
-    width: 100%;
-    text-indent: 10px;
-    color: #292d3dff
+    color: #292d3dff;
+    padding: 10px;
+    width: 90%;
+    resize: none;
 }
 
 .tab_input:focus {
@@ -200,4 +210,30 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
+}
+
+
+.box_choices{
+    display: flex;
+    gap: 10px;
+    margin: 15px 0px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
+}
+
+.EE_subject{
+    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid #e0e3e6;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.EE_subject:hover{
+    background-color: #f8f9fa;
+}
+
+.tab3_form{
+    border: 1px solid #252a35ff;
+    padding: 30px;
 }
