--- a/Front-End/src/css/User/Tabs/Components/Result.css
+++ b/Front-End/src/css/User/Tabs/Components/Result.css
@@ -304,4 +304,10 @@
     font-size: 15px;
     font-weight: bold;
     margin: 10px 10px 5px;
+    color: #4e7f38ff;
+}
+
+.Link{
+    text-decoration: none;
+    color: #252a35ff;
 }
