--- a/Front-End/src/css/User/Tabs/Components/Result.css
+++ b/Front-End/src/css/User/Tabs/Components/Result.css
@@ -3,50 +3,55 @@
     margin: 0px;
 }
 
-.Profile {
+.Result {
     /* display: flex;
     gap: 30px;
     height: 100%; */
-    margin: 30px 0px;
+    margin: 50px 0px;
     display: grid;
     grid-auto-columns: 1fr;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 30px 30px;
-    grid-template-areas:
-        "Profile-box Profile-result-exam"
-        "Profile-box Profile-result-ia";
     height: max-content;
+    /* background-color: red; */
+    width: 100%;
 }
 
 
-.Profile-box {
-    grid-area: Profile-box; 
+.Result-box {
     box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
-    height: 80%;
+    height: 100%;
     border-radius: 20px;
     padding: 50px;
     background-color: rgba(141, 188, 107, 0.056);
     border: 1px solid #2932410b;
 }
 
-.Profile-result-exam { 
+.Result-box2{
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
+    height: max-content;
+}
+
+/* .Profile-result-exam { 
     grid-area: Profile-result-exam;  
-    height: 80%;
+    height: 100%;
 }
 .Profile-result-ia { 
     grid-area: Profile-result-ia;  
-    height: 80%;
-}
+    height: 100%;
+} */
 
-.Profile-container {
+/* .Profile-container {
     width: 40%;
     display: flex;
     flex-direction: column;
     height: 95%;
     gap: 30px;
 
-}
+} */
 
 .Profile-Information,
 .Profile-result-exam,
@@ -182,7 +187,9 @@
     justify-content: space-around;
     align-items: center;
     margin-top: 10px;
+
 }
+
 
 .Profile-interest {
     flex-direction: column;
@@ -225,22 +232,22 @@
 }
 
 .Math {
-    /* background-color: #0096c7; */
+    height: 100%;
     background-color: #0095c76b;
 }
 
 .Science {
-    /* background-color: #52b788; */
+
     background-color: #52b7886b;
 }
 
 .English {
-    /* background-color: #f13030; */
+  
     background-color: #f130306b;
 }
 
-.History {
-    /* background-color: #f4a261; */
+.Reading {
+  
     background-color: #f4a2616b;
 }
 
@@ -310,4 +317,30 @@
 .Link{
     text-decoration: none;
     color: #252a35ff;
+}
+.Result_Table_Column{
+    border: 1px solid rgba(105, 148, 116, 0.718);
+    display: flex;
+    justify-content: space-around;
+    margin: 10px 0px 0px;
+}
+
+.Result_Table_Title, .Result_Table_p1{
+    border: 1px solid rgba(105, 148, 116, 0.879);
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.Result_Table_Row{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+}
+
+.Result_Table_p1{
+    border: 1px solid rgba(105, 148, 116, 0.879);
+    border-top: 0px;
+    padding: 5px;
 }
