--- a/Front-End/src/css/Admin/Form/CI_Form.css
+++ b/Front-End/src/css/Admin/Form/CI_Form.css
@@ -42,7 +42,7 @@
     grid-auto-columns: 1fr;
     grid-template-columns: 0.9fr 1.2fr;
     grid-template-rows: 1fr;
-    gap: 0px 10px;
+    gap: 0px 50px;
     grid-template-areas:
         ". .";
     align-items: flex-start;
@@ -62,6 +62,8 @@
     font-size: 13px;
     color: #697280ff;
     font-family: 'Poppins', sans-serif;
+    margin-top: 5px;
+    text-align: justify;
 }
 
 .CI_Form_input{
