--- a/Front-End/src/css/Admin/Form/Entrance_Exam.css
+++ b/Front-End/src/css/Admin/Form/Entrance_Exam.css
@@ -91,12 +91,13 @@
     border: 1px solid #CED4DA;
     border-radius: 5px;
     font-family: 'Poppins', sans-serif;
-    margin: 10px 0px;
+    margin: 10px 0px 0px;
     letter-spacing: 0.5px;
     color: #292d3dff;
     padding: 10px;
-    width: 90%;
+    /* width: 100%; */
     resize: none;
+    width: 98.5%;
 }
 
 .tab_input:focus {
@@ -243,6 +244,7 @@
     font-size: 13px;
     letter-spacing: 0.5px;
     color: #505161ff;
+    width: 90%;
 }
 
 .limit{
@@ -256,6 +258,7 @@
     grid-auto-columns: 1fr;
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 1fr 1fr;
-    gap: 0px 0px;
-    width: 94.7%;
+    gap: 20px 40px;
+    width: 99.2%;
+    margin-top: 5px;
 }
