--- a/Front-End/src/css/Admin/Form/CI_Form.css
+++ b/Front-End/src/css/Admin/Form/CI_Form.css
@@ -73,6 +73,7 @@
     border: 1px solid #dee2e6;
     font-family: 'Poppins', sans-serif;
     box-shadow: rgba(0, 0, 0, 0.01) 0px 4px 12px;
+    resize: none;
 }
 
 .CI_Form_input:focus{
