--- a/Front-End/src/css/User/Tabs/Course_Directory.css
+++ b/Front-End/src/css/User/Tabs/Course_Directory.css
@@ -34,6 +34,7 @@
     border-radius: 10px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border: 1px solid #E9ECEF;
+    padding-bottom: 20PX;
 
 }
 
