--- a/Front-End/src/css/User/Tabs/User_Profile.css
+++ b/Front-End/src/css/User/Tabs/User_Profile.css
@@ -122,10 +122,11 @@
     padding: 10px 0px;
     text-indent: 10px;
     width: 100%;
-    font-family: 'QuickSand', sans-serif;
-    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
     letter-spacing: 1px;
     transition: 0.3s;
+    font-size: 14px;
 }
 
 .Profile-input-container input:disabled , .radio:disabled{
@@ -200,6 +201,10 @@
     margin: 5px 0px 0px 5px;
 }
 
+.tab_input{
+    font-family: 'QuickSand', sans-serif;
+    color: red;
+}
 /* 
 .result-title {
     font-family: 'Quicksand', sans-serif;
